--- a/views/innerheader.html
+++ b/views/innerheader.html
@@ -19,6 +19,7 @@
 					<div class="col-sm-4">
 						<div class="shop-menu pull-right">
 							<ul class="nav navbar-nav">
+								<li><a href="#/profile" class="onlycursor"><i class="fa fa-user"></i> My profile </a></li>
 								<li><a class="onlycursor" ng-click="signupprofile()"><i class="fa fa-user"></i> {{signuppro}}</a></li>
 								<li><a class="onlycursor" ng-click="loginfunction()"><i class="fa fa-lock"></i> {{loginlogout}}</a></li>
 							</ul>
