--- a/views/detail.html
+++ b/views/detail.html
@@ -23,7 +23,7 @@
                             <p><i class="fa fa-map-marker fapadr"></i>&nbsp;{{detail.listing.address}}</p>
                             <p><i class="fa fa-phone fapadr"></i>&nbsp;{{detail.listing.contactno}}</p>
                             <p>
-                                <i class="fa fa-at fapadr"></i>Send Enquiry By Email
+                                <i class="fa fa-at fapadr"></i><a href="#enq">Send Enquiry By Email</a>
                             </p>
                         </div>
 
@@ -103,6 +103,7 @@
                             <i class="fa fa-money"></i><span class="fapadl mhs"  ng-repeat="payment in detail.modeofpayment" >{{payment.modeofpaymentname}}</span>
                         </div>
                     </div>
+                    <a name="#enq"></a>
                     <div class="more-text">
                         <h2 class="title text-center">Enquiry</h2>
                         <div class="signup-form">
@@ -125,10 +126,10 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">Recently Visited</div>
                             <table class="table">
-                               
                                 <tr ng-repeat="recent in recentvisit">
-                                    <td><img src="{{recent.logo|imagepath}}"></td>
-                                    <td>{{recent.name}}</td>
+                                    <td><a href="#/detail/{{recent.id}}"><img src="{{recent.logo|imagepath}}"></a></td>
+                                    <td><a href="#/detail/{{recent.id}}" class="linknot">{{recent.name}}</a></td>
+<!--                                    </a>-->
                                 </tr>
                             </table>
                         </div>
