--- a/views/detail.html
+++ b/views/detail.html
@@ -23,7 +23,7 @@
                             <p><i class="fa fa-map-marker fapadr"></i>&nbsp;{{detail.listing.address}}</p>
                             <p><i class="fa fa-phone fapadr"></i>&nbsp;{{detail.listing.contactno}}</p>
                             <p>
-                                <i class="fa fa-at fapadr"></i><a href="#enq">Send Enquiry By Email</a>
+                                <i class="fa fa-at fapadr"></i><A HREF="#enq">Send Enquiry By Email</A>
                             </p>
                         </div>
 
@@ -103,7 +103,7 @@
                             <i class="fa fa-money"></i><span class="fapadl mhs"  ng-repeat="payment in detail.modeofpayment" >{{payment.modeofpaymentname}}</span>
                         </div>
                     </div>
-                    <a name="#enq"></a>
+                    <A NAME="enq"></A>
                     <div class="more-text">
                         <h2 class="title text-center">Enquiry</h2>
                         <div class="signup-form">
@@ -135,9 +135,14 @@
                         </div>
                     </div>
                     {{detail.listing.video}}
+                    <iframe width="84%" height="315"
+src="http://www.youtube.com/embed/XGSy3_Czz8k">
+</iframe>
+<!--
                     <video width="320" height="240" controls>
                       <source src="http://localhost/foranyinformation/uploads/event30414.3gp">
                     </video>
+-->
                     
                 </div>
             </div>
