--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -1044,9 +1044,10 @@ h2.title:before {
 .category-products .panel-default .panel-heading .panel-title a {
     color: #696763;
     font-family: 'Roboto', sans-serif;
-    font-size: 14px;
+    font-size: 13px;
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform: CAPITALIZE;
+    font-weight: 300;
 }
 .panel-group .panel-heading + .panel-collapse .panel-body {
     border-top: 0 none;
@@ -2286,6 +2287,7 @@ padding: 0px 7px 0px 11px;
 }
 .subcate-text{
     color: #049fb3;
+    text-transform: CAPITALIZE;
 }
 .subcate-text:hover{
     color: #026177;
@@ -2344,4 +2346,10 @@ padding: 0px 7px 0px 11px;
     font-size: 20px;
     position: relative;
     top: 4px;
+}
+.blog-post-area {
+    margin-top: 10px;
+}
+.single-blog-post .msg {
+    color: white;
 }
