--- a/views/category.html
+++ b/views/category.html
@@ -65,7 +65,11 @@
 <!--                                <a class="btn btn-primary mrr" href="">Other Posts</a>-->
                             </p>
                             </div>
-                            <div class="cate-social">	
+
+                            <div class="img-cat">
+                           <span><p>Free</p></span>
+                            </div>
+                        <div class="cate-social">	
 							<span class='st_facebook_hcount' displayText='Facebook' style="height:0px"></span>
 <span class='st_twitter_hcount' displayText='Tweet'></span>
 <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
