--- a/views/detail.html
+++ b/views/detail.html
@@ -134,10 +134,8 @@
                             </table>
                         </div>
                     </div>
-                    {{detail.listing.video}}
-                    <iframe width="84%" height="315"
-src="http://www.youtube.com/embed/XGSy3_Czz8k">
-</iframe>
+                    <iframe width="84%" height="315" src="//www.youtube.com/embed/{{detail.listing.video}}">
+                    </iframe>
 <!--
                     <video width="320" height="240" controls>
                       <source src="http://localhost/foranyinformation/uploads/event30414.3gp">
