--- a/views/category.html
+++ b/views/category.html
@@ -67,7 +67,7 @@
                             </div>
 
                             <div class="img-cat">
-                           <span><p>Free</p></span>
+                           <img src="{{'png/free.png'|imagepath2}}">
                             </div>
                         <div class="cate-social">	
 							<span class='st_facebook_hcount' displayText='Facebook' style="height:0px"></span>
