--- a/views/detail.html
+++ b/views/detail.html
@@ -119,8 +119,9 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-
+<div class="facebook-deatils">
                     <div class="fb-like-box" data-href="https://www.facebook.com/{{detail.listing.facebook}}" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="true" data-show-border="true"></div>
+                    </div>
                     <div class="recent-box">
                  
                         <div class="panel panel-default">
@@ -134,8 +135,10 @@
                             </table>
                         </div>
                     </div>
+                    <div class="video-you">
                     <iframe width="84%" height="315" src="//www.youtube.com/embed/{{detail.listing.video}}">
                     </iframe>
+                    </div>
 <!--
                     <video width="320" height="240" controls>
                       <source src="http://localhost/foranyinformation/uploads/event30414.3gp">
