--- a/views/slider.html
+++ b/views/slider.html
@@ -46,26 +46,71 @@
 
             
             <div class="col-xs-3">
+            
+            
+             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel"data-interval="2000">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+ 
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="{{'png/slider1.png'|imagepath2}}" alt="" height="100%" width="100%">
+      <div class="carousel-caption">
+         
+      </div>
+    </div>
+    <div class="item">
+      <img src="{{'png/slider2.png'|imagepath2}}" alt="" height="100%" width="100%">
+      <div class="carousel-caption">
+          
+      </div>
+    </div>
+    <div class="item">
+      <img src="{{'png/slider3.png'|imagepath2}}" alt="" height="100%" width="100%">
+      <div class="carousel-caption">
+         
+      </div>
+    </div>
+  </div>
+ 
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+<!--    <span class="glyphicon glyphicon-chevron-left"></span>-->
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+<!--    <span class="glyphicon glyphicon-chevron-right"></span>-->
+  </a>
+</div>
+            
+            
+            
 
+<!--
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
+                 
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                     </ol>
 
-                        <!-- Wrapper for slides -->
+                         Wrapper for slides 
                         <div class="carousel-inner" role="listbox">
                             
                         <div class="item active items" ng-repeat="one in positionone">
                             <img src="{{one.image|imagepath}}" width="200"/>
                         </div>
 
-                    <!-- Controls -->
+             
                     
                 </div>
                 </div>
+-->
             </div>
 
 
@@ -117,25 +162,79 @@
 
             
             <div class="col-xs-3">
+            
+            
+            
+            
+             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel"data-interval="2000">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+ 
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="{{'png/slider4.png'|imagepath2}}" alt="" height="100%" width="100%">
+      <div class="carousel-caption">
+         
+      </div>
+    </div>
+    <div class="item">
+      <img src="{{'png/slider5.png'|imagepath2}}" alt="" height="100%" width="100%">
+      <div class="carousel-caption">
+          
+      </div>
+    </div>
+    <div class="item">
+      <img src="{{'png/slider6.png'|imagepath2}}" alt="" height="100%" width="100%">
+      <div class="carousel-caption">
+         
+      </div>
+    </div>
+  </div>
+ 
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+<!--    <span class="glyphicon glyphicon-chevron-left"></span>-->
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+<!--    <span class="glyphicon glyphicon-chevron-right"></span>-->
+  </a>
+</div>
 
+<!--
                 <div id="carousel-example-generic1" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
+                     Indicators 
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-example-generic1" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic1" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic1" data-slide-to="2"></li>
                     </ol>
 
-                    <!-- Wrapper for slides -->
+                   
                     <div class="carousel-inner" role="listbox">
                         <div class="item active items" ng-repeat="one in positiontwo">
                             <img src="{{one.image|imagepath}}" width="200"/>
                         </div>
                     </div>
+                       <div class="carousel-inner" role="listbox">
+                        <div class="item active items" ng-repeat="one in positiontwo">
+                            <img src="{{one.image|imagepath}}" width="200"/>
+                        </div>
+                    </div>
+                       <div class="carousel-inner" role="listbox">
+                        <div class="item active items" ng-repeat="one in positiontwo">
+                            <img src="{{one.image|imagepath}}" width="200"/>
+                        </div>
+                    </div>
 
-                    <!-- Controls -->
+                
                     
                 </div>
+-->
             </div>
 
 <!--<img src="http://localhost/anyinform/lib/images/home/shipping.jpg" class="homeimageleft">-->
