--- a/views/footerbottom.html
+++ b/views/footerbottom.html
@@ -2,7 +2,7 @@
 			<div class="container">
 				<div class="row">
 					<p class="pull-left"> Copyright © 2014 ForAnyInformation Inc. All rights reserved.</p>
-					<p class="pull-right">Designed by <span><a target="_blank" href="http://www.wohlig.com">Wohlig Technologies LLP</a></span></p>
+					<p class="pull-right">Developed by <span><a target="_blank" href="http://www.wohlig.com">Wohlig Technologies LLP</a></span></p>
 				</div>
 			</div>
 		</div>
