--- a/views/profile.html
+++ b/views/profile.html
@@ -7,11 +7,11 @@
                     <div class="login-form ">
                         <!--sign up form-->
                         <h2>My Profile</h2>
-                        <h5 class="demo">{{signupmsg}}</h5>
+                        <h5 class="demo">{{profilemsg}}</h5>
                         <input type="text" ng-model="profile.firstname" class="form-control" placeholder="First Name" />
                         <input type="text" ng-model="profile.lastname" class="form-control" placeholder="Last Name" />
                         <input type="email" ng-model="profile.email" class="form-control" ng-class="allvalidation[0].validation" required placeholder="Email Address *" />
-                        <input type="number" min="6" ng-model="profile.phone" class="form-control" placeholder="Phone Number" />
+                        <input type="number" min="6" ng-model="profile.contact" class="form-control" placeholder="Phone Number" />
                         <input type="text" ng-model="profile.dob" class="form-control" placeholder="Date Of Birth" />
                         <input type="text" ng-model="profile.website" class="form-control" placeholder="Website" />
 
