--- a/views/category.html
+++ b/views/category.html
@@ -62,7 +62,7 @@
                             <p class="pull-left">
                                 <a class="btn btn-primary mrr" href="">Send SMS</a>
                                 <a class="btn btn-primary mrr" ng-click="sendemail(list.listing)">Send Email</a>
-                                <a class="btn btn-primary mrr" >Send Email</a>
+                                <a class="btn btn-primary mrr enq " ng-click="onemailclick();">Enquiry</a>
                                 
 
 <!--                                <a class="btn btn-primary mrr" href="">Other Posts</a>-->
