--- a/views/detail.html
+++ b/views/detail.html
@@ -74,13 +74,17 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
+           <div class="col-md-3"></div>
+            <div class="col-md-6">
 		<div class="image-row">
 				
-				<a class="example-image-link" href="img/demopage/image-2.jpg" data-lightbox="example-2" data-title="Optional caption."><img class="example-image" src="img/demopage/image-2.jpg" alt="image-1"/></a>
+<img src="lib/images/png/slider1.png" class="lightbox" ng-click="imagelightbox('lib/images/png/slider1.png')" height="150px" width="150px"> 
+                    
+			            
+			            
 			</div>
             </div>
-
+<div class="col-md-3"></div>
         </div>
         
     </div>
