--- a/views/header.html
+++ b/views/header.html
@@ -9,11 +9,13 @@
 							<ul class="nav nav-pills">
                                 <li><a class="onlycursor" ng-click="loginfunction()"><i class="fa fa-lock"></i> {{loginlogout}}</a></li>
 								<li><a ng-click="showlisting()" class="onlycursor">&nbsp;&nbsp;List Your Business</a></li>
+								<a ng-click="#" class="onlycursor">&nbsp;&nbsp;<span class="symbol" style="font-size:15px; font-size: 15px;position: relative;left: 470px;top: 8px;color: #BCC7C8;text-shadow: 1px 1px #BCC7C8;" ng-click="showlisting()">{{myemail}}</span></a>
 <!--								<li><a href="#/listbusiness" class="onlycursor">&nbsp;&nbsp;List Your Business</a></li>-->
 								<!-- <li><a href="#"><i class="fa fa-phone"></i> +2 95 01 88 821</a></li>
 								<li><a href="#"><i class="fa fa-envelope"></i> info@domain.com</a></li> -->
 							</ul>
 						</div>
+						
 					</div>
 					<div class="col-sm-6">
 						<div class="social-icons pull-right">
