--- a/views/listbusiness.html
+++ b/views/listbusiness.html
@@ -9,7 +9,7 @@
                 <h5>Category List</h5>
                 <div class="list-back">
                     <div data-angular-treeview="true" data-tree-model="roleList" data-node-id="id" data-node-label="name">
-                        <div <div data-node-children="children" style="padding-left:10px">
+                        <div> <div data-node-children="children" style="padding-left:10px">
 
                         </div>
                     </div>
